--- a/mediaserver.yml
+++ b/mediaserver.yml
@@ -149,3 +149,15 @@
       volumes:
         - "/etc/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
         - "prometheus-data:/prometheus"
+
+  - name: "Launch grafana container"
+    docker_container:
+      name: grafana
+      state: started
+      pull: true
+      restart_policy: unless-stopped
+      image: grafana/grafana
+      ports:
+        - "3000:3000"
+      volumes:
+        - "grafana-data:/var/lib/grafana"
