--- a/mediaserver.yml
+++ b/mediaserver.yml
@@ -161,3 +161,25 @@
         - "3000:3000"
       volumes:
         - "grafana-data:/var/lib/grafana"
+
+  - name: "Launch unifi controller container"
+    docker_container:
+      name: deluge
+      state: started
+      pull: true
+      restart_policy: unless-stopped
+      image: linuxserver/unifi
+      ports:
+        - "3478:3478/udp"
+        - "10001:10001/udp"
+        - "8080:8080"
+        - "8081:8081"
+        - "8443:8443"
+        - "8843:8843"
+        - "8880:8880"
+      env:
+        PUID: 110
+        PGID: 117
+      volumes:
+        - "unifi-config:/config"
+        
