--- a/mediaserver.yml
+++ b/mediaserver.yml
@@ -22,8 +22,8 @@
   - name: Install pip
     easy_install: name=pip
 
-  - name: Install docker-py
-    pip: name=docker-py state=latest
+  - name: Install docker python library
+    pip: name=docker state=latest
 
 
   - name: Add docker gpg key
