added emby server

--- a/mediaserver.yml
+++ b/mediaserver.yml
@@ -259,3 +259,20 @@
       volumes:
         - "pihole-config:/etc/pihole/"
         - "pihole-dnsmasqd:/etc/dnsmasq.d/"
+
+  - name: "Launch Emby container"
+    docker_container:
+      name: emby
+      state: started
+      pull: true
+      restart_policy: unless-stopped
+      image: emby/embyserver
+      ports:
+        - "8096:8096"
+        - "8920:8920"
+      env:
+        UID: 110
+        GID: 117
+      volumes:
+        - "emby-config:/config"
+        - "/tank2/media:/tank2/media"
